--- a/gradle.properties
+++ b/gradle.properties
@@ -12,3 +12,4 @@ org.gradle.jvmargs=-Xmx1G
     commons_text_version = 1.9
     spotbugs_version = 4.4.1
 	log4j_version = 2.14.1
+	gradle_core_version = 6.1.1
