--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     // Apply the java-library plugin for API and implementation separation.
     id 'java-library'
+    id 'com.github.johnrengelman.shadow' version '7.0.0'
 }
 
 sourceCompatibility = JavaVersion.VERSION_1_8
@@ -31,20 +32,20 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.7.2'
 
     // log4j for Minecraft compatible logging
-    implementation "org.apache.logging.log4j:log4j-api:${project.log4j_version}"
-    implementation "org.apache.logging.log4j:log4j-core:${project.log4j_version}"
+    shadow "org.apache.logging.log4j:log4j-api:${project.log4j_version}"
+    shadow "org.apache.logging.log4j:log4j-core:${project.log4j_version}"
 
     // gradle-core for semver operations
-    implementation "org.gradle:gradle-core:${project.gradle_core_version}"
+    shadow "org.gradle:gradle-core:${project.gradle_core_version}"
 
     // jackson for reading YAML
-	implementation "com.fasterxml.jackson.core:jackson-core:${project.jackson_version}"
-	implementation "com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:${project.jackson_dataformat_yaml_version}"
-	implementation "com.fasterxml.jackson.core:jackson-databind:${project.jackson_version}"
-    implementation "com.fasterxml.jackson.core:jackson-annotations:${project.jackson_version}"
+	shadow "com.fasterxml.jackson.core:jackson-core:${project.jackson_version}"
+	shadow "com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:${project.jackson_dataformat_yaml_version}"
+	shadow "com.fasterxml.jackson.core:jackson-databind:${project.jackson_version}"
+    shadow "com.fasterxml.jackson.core:jackson-annotations:${project.jackson_version}"
 
     // commons-text for capitalizing text
-    implementation "org.apache.commons:commons-text:${project.commons_text_version}"
+    shadow "org.apache.commons:commons-text:${project.commons_text_version}"
 
     // spotbugs
     compileOnly "com.github.spotbugs:spotbugs:${project.spotbugs_version}"
@@ -67,11 +68,15 @@ java {
 	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
 	// if it is present.
 	// If you remove this line, sources will not be generated.
-	withSourcesJar()
+	// withSourcesJar()
 }
 
 jar {
 	from("LICENSE") {
 		rename { "${it}_${project.archivesBaseName}"}
 	}
+}
+
+shadowJar {
+    configurations = [project.configurations.shadow] // ***
 }
