--- a/jitpack.yml
+++ b/jitpack.yml
@@ -1,4 +1,5 @@
 jdk:
   - openjdk11
 install:
-  - ./gradlew shadowJar publishToMavenLocal 
+  - chmod +x gradlew
+  - ./gradlew shadowJar publishToMavenLocal
