--- a/build.gradle
+++ b/build.gradle
@@ -77,6 +77,7 @@ jar {
 
 shadowJar {
     configurations = [project.configurations.shadow] // ***
+    archiveFileName = "${project.archivesBaseName}-${project.version}.${extension}"
 }
 
 publishing {
