Use a nicer solution for c503e7dbccadae019119d5b4235c18fdcf196eb0

--- a/build.gradle
+++ b/build.gradle
@@ -76,8 +76,8 @@ jar {
 }
 
 shadowJar {
-    configurations = [project.configurations.shadow] // ***
-    archiveFileName = "${project.archivesBaseName}-${project.version}.${extension}"
+    configurations = [project.configurations.shadow]
+    archiveClassifier.set("")
 }
 
 publishing {
