Fix runtime error with log4j

--- a/build.gradle
+++ b/build.gradle
@@ -73,6 +73,9 @@ jar {
 	from("LICENSE") {
 		rename { "${it}_${project.archivesBaseName}"}
 	}
+    manifest {
+        attributes 'Multi-Release': 'true'
+    }
 }
 
 shadowJar {
