--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@ org.gradle.jvmargs=-Xmx1G
 
 # Properties
 	version = 1.0.0
-	maven_group = com.github.nebelnidas
+	maven_group = com.github.nebelnidas.modget
 	archives_base_name = modget-lib
 
 # Dependencies
