--- a/gradle.properties
+++ b/gradle.properties
@@ -7,5 +7,5 @@ org.gradle.jvmargs=-Xmx1G
 	archives_base_name = modget-lib
 
 # Dependencies
-	modget_manifest_api_version = 0.1.1
+	modget_manifest_api_version = 0.2.0-alpha.1
     spotbugs_version = 4.4.1
