--- a/.gitignore
+++ b/.gitignore
@@ -19,7 +19,9 @@ classes/
 # vscode
 
 .settings/
-.vscode/
+.vscode/*
+!.vscode/extensions.json
+!.vscode/settings.json
 bin/
 .classpath
 .project
