--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -5,6 +5,7 @@
 		"sohibe.java-generate-setters-getters",
 		"madhavd1.javadoc-tools",
 		"nathanridley.autotrim",
-		"streetsidesoftware.code-spell-checker"
+		"streetsidesoftware.code-spell-checker",
+		"yzhang.markdown-all-in-one"
 	]
 }
