--- a/gradle.properties
+++ b/gradle.properties
@@ -2,10 +2,11 @@
 org.gradle.jvmargs=-Xmx1G
 
 # Properties
-	version = 2.0.3
-	maven_group = com.github.nebelnidas.modget
-	archives_base_name = modget-lib
+	version = 3.0.0-alpha.1
+	maven_group = com.github.reviversmc.modget
+	name = modget-lib
 
 # Dependencies
-	modget_manifest_api_version = 0.2.0-alpha.1
+	modget_manifest_api_version = 0.2.0-rc.2
     spotbugs_version = 4.4.1
+	log4j_version = 2.14.1
