--- a/gradle.properties
+++ b/gradle.properties
@@ -2,11 +2,11 @@
 org.gradle.jvmargs=-Xmx1G
 
 # Properties
-	version = 3.0.0-alpha.2
+	version = 3.0.0-rc.1
 	maven_group = com.github.reviversmc.modget
 	name = modget-lib
 
 # Dependencies
-	modget_manifest_api_version = 0.2.0-rc.4
+	modget_manifest_api_version = 0.2.0
     spotbugs_version = 4.4.1
 	log4j_version = 2.14.1
