--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@
 org.gradle.jvmargs=-Xmx1G
 
 # Properties
-	version = 3.0.0-rc.7
+	version = 3.0.0
 	maven_group = com.github.reviversmc.modget
 	name = modget-lib
 
