Some stuff I wrote two months ago
Will clean it up later

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,11 +2,13 @@
 org.gradle.jvmargs=-Xmx1G
 
 # Properties
-	version = 3.0.0
-	maven_group = com.github.reviversmc.modget
-	name = modget-lib
+version = 4.0.0-alpha.1
+maven_group = com.github.reviversmc.modget
+name = modget-lib
 
 # Dependencies
-	modget_manifest_api_version = 0.2.2
-    spotbugs_version = 4.4.1
-	log4j_version = 2.14.1
+modget_manifest_api_version = 0.3.0-alpha.1
+jackson_version = 2.13.0
+spotbugs_version = 4.5.2
+log4j_version = 2.16.0
+commons_io_version = 2.11.0
