--- a/build.gradle
+++ b/build.gradle
@@ -35,9 +35,18 @@ dependencies {
     api "com.github.ReviversMC.modget-manifest-api:spec4:${modget_manifest_api_version}"
     // shadow implementation(files("libs/modget-manifest-api-spec4-0.1.0.jar"))
 
+	// jackson for reading YAML
+	implementation "com.fasterxml.jackson.core:jackson-core:${project.jackson_version}"
+	implementation "com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:${project.jackson_version}"
+	implementation "com.fasterxml.jackson.core:jackson-databind:${project.jackson_version}"
+	implementation "com.fasterxml.jackson.core:jackson-annotations:${project.jackson_version}"
+
 	// log4j for Minecraft compatible logging
 	implementation "org.apache.logging.log4j:log4j-api:${project.log4j_version}"
 	implementation "org.apache.logging.log4j:log4j-core:${project.log4j_version}"
+
+    // Commons IO for downloading files
+    implementation "commons-io:commons-io:${project.commons_io_version}"
 
     // spotbugs
     compileOnly "com.github.spotbugs:spotbugs:${project.spotbugs_version}"
