--- a/build.gradle
+++ b/build.gradle
@@ -45,11 +45,14 @@ dependencies {
 	implementation "org.apache.logging.log4j:log4j-api:${project.log4j_version}"
 	implementation "org.apache.logging.log4j:log4j-core:${project.log4j_version}"
 
-    // Lombok for null checks
+    // Lombok for null checks, automatic getters and setters etc.
     implementation "org.projectlombok:lombok:${project.lombok_version}"
 
     // Commons IO for downloading files
     implementation "commons-io:commons-io:${project.commons_io_version}"
+
+    // BeanUtils for copying field values from one object to another
+    implementation "commons-beanutils:commons-beanutils:${project.beanutils_version}"
 
     // spotbugs
     compileOnly "com.github.spotbugs:spotbugs:${project.spotbugs_version}"
