Update Manifest API to 0.3.0-alpha.4

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@
 org.gradle.jvmargs=-Xmx2G
 
 # Properties
-version = 4.0.0-alpha.3
+version = 4.0.0-alpha.4
 maven_group = com.github.reviversmc.modget
 name = modget-lib
 
@@ -12,4 +12,5 @@ jackson_version = 2.13.0
 spotbugs_version = 4.5.2
 log4j_version = 2.16.0
 commons_io_version = 2.11.0
+beanutils_version = 1.9.4
 lombok_version = 1.18.22
